bk_ida/gccida/g1/truthvalue_conversion
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2564:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2569:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2570:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2574:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2575:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2577:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2578:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2579:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2580:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2581:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2582:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2584:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2585:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2700:3: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
( tree_code)( ( *( ( _BYTE *)&expr->block.common + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
  ^~~~~~~~~
  tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2700:99: error: too few arguments to function call, expected 3, have 1
( tree_code)( ( *( ( _BYTE *)&expr->block.common + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
~~~~~~~~~~~~                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/tree.h:2477:1: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2728:3: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
( tree_code)( ( *( _BYTE *)( expr->int_cst.int_cst.high + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
  ^~~~~~~~~
  tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/c-common.c:2728:106: error: too few arguments to function call, expected 3, have 1
( tree_code)( ( *( _BYTE *)( expr->int_cst.int_cst.high + 17) & 1) == 0 ? TRUTH_ORIF_EXPR : TRUTH_OR_EXPR), 
~~~~~~~~~~~~                                                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/tree.h:2477:1: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/truthvalue_conversion/src/obj/c-common.o] Error 1
